# weekseries-downloader

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  LOGGING.md  PLAN.md  README.md  example.py  logging.conf  pyproject.toml  pytest.ini  test_filename_generation.py  test_filename_module.py  test_integration.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.kiro/specs/comprehensive-testing/: design.md  requirements.md  tasks.md
.kiro/specs/url-extraction/: design.md  requirements.md  tasks.md
tests/: __init__.py  conftest.py  test_batch_download_integration.py  test_cache.py  test_cli_integration.py  test_converter.py  test_exceptions.py  test_filename_generator.py  test_hls_downloader.py  test_logging_config.py  test_models.py  test_series_parser.py  test_url_detector.py  test_utils.py
weekseries_downloader/: __init__.py  cache.py  cli.py  converter.py  downloader.py  exceptions.py  extractor.py  filename_generator.py  logging_config.py  models.py  url_detector.py  utils.py
weekseries_downloader/download/: __init__.py  hls_downloader.py  media_converter.py  playlist_parser.py  segment_buffer.py  segment_downloader.py
weekseries_downloader/infrastructure/: __init__.py  cache_manager.py  config.py  http_client.py  parsers.py
weekseries_downloader/output/: __init__.py  file_manager.py  filename_generator.py
weekseries_downloader/series_processing/: __init__.py  batch_downloader.py  progress_tracker.py  series_parser.py
weekseries_downloader/url_processing/: __init__.py  url_decoder.py  url_extractor.py  url_parser.py
